  [Michele Simionato]
  * Added a check that on the number of intensity measure types when
    generating uniform hazard spectra (must be > 1)

python-oq-engine (2.5.0-0~precise01) precise; urgency=low

  [Armando Scarpati]
  * Added a confirmation dialog when trying to remove a calculation via the
    WebUI

  [Michele Simionato]
  * Hazard maps were not exposed to the engine in event based calculations
  * Fixed the check on the DbServer instance: it was failing in presence
    of symbolic links
  * Optimized MultiMFD objects for the case of homogeneous parameters
  * Added an .npz exporter for the scenario_damage output `dmg_by_asset`
  * Removed the pickled CompositeSourceModel from the datastore
  * Improved the error message when the rupture mesh spacing is too small
  * Unified the versions of baselib, hazardlib and engine
  * Raised a clear error if the user does not set the `calculation_mode`
  * Made it is possible to pass the hdf5 full path to the DataStore class
  * Made it possible to use CELERY_RESULT_BACKEND != 'rpc://'

  [Michele Simionato, Daniele Viganò]
  * Merged the `oq-hazardlib` repository into `oq-engine`.
    The `python-oq-hazardlib` package is now provided by `python-oq-engine`

  [Michele Simionato]
  * Added CSV exports for the agg_curve outputs
  * Fixed a bug in `oq export hcurves-rlzs --exports hdf5`
  * Restored the parameter sites_per_tile with a default of 20,000, i.e.
    tiling starts automatically if there are more than 20,000 sites
  * Better error message for invalid exposures
  * Removed the deprecated XML outputs of the risk calculators
  * Added an end point `v1/calc/XXX/oqparam` to extract the calculation
    parameters as a JSON dictionary
  * Fixed the excessive logic tree reduction in event based calculators
  * Improved the command `oq db`
  * Fixed an encoding bug when logging a filename with a non-ASCII character
  * Fixed a bug when exporting a GMF with `ruptureId=0`